# tiger

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  bacon.toml  ck3-tiger.conf  eu5-tiger.conf  git-hooks-pre-commit  grep-unknown  hoi4-tiger.conf  imperator-tiger.conf  update-versions.sh  vic3-tiger.conf
.github/workflows/: doc.yml  releases.yml  test-windows.yml  test.yml
benches/: ck3.toml.example  internals.rs  vic3.toml.example
ck3-tiger/: Cargo.toml
ck3-tiger/benches/: criterion.rs
ck3-tiger/src/: lib.rs
eu5-tiger/: Cargo.toml
eu5-tiger/src/: lib.rs
hoi4-tiger/: Cargo.toml
imperator-tiger/: Cargo.toml
imperator-tiger/src/: lib.rs
internal_benches/: Cargo.toml
internal_benches/benches/: internals.rs
internal_benches/src/: ck3.rs  lib.rs  vic3.rs
mod-test-vanilla/: eu5-tiger.conf  vic3-tiger.conf
mod-test-vanilla/.metadata/: metadata.json
src/: block.rs  config_load.rs  context.rs  datacontext.rs  datatype.rs  date.rs  db.rs  dds.rs  defines.rs  desc.rs  effect.rs  effect_validation.rs  everything.rs  filecontent.rs  fileset.rs  game.rs  helpers.rs  item.rs  launcher_settings.rs  lib.rs  lowercase.rs  macros.rs  mod_metadata.rs  modfile.rs  modif.rs  on_action.rs  pathtable.rs  pdxfile.rs  rivers.rs  scopes.rs  script_value.rs  special_tokens.rs  token.rs  trigger.rs  validate.rs  validator.rs  variable_scopes.rs  variables.rs
src/benches/: ck3.rs  mod.rs  vic3.rs
src/block/: blockitem.rs  comparator.rs  field.rs
src/ck3/: effect_validation.rs  events.rs  modif.rs  validate.rs
src/data/: accessory.rs  achievements.rs  assets.rs  coa.rs  coadesigner.rs  colors.rs  customloca.rs  data_binding.rs  defines.rs  dlc.rs  effect_localization.rs  environment.rs  events.rs  fonts.rs  genes.rs  gui.rs  localization.rs  mod.rs  music.rs  on_actions.rs  portrait.rs  script_values.rs  scripted_effects.rs  scripted_guis.rs  scripted_lists.rs  scripted_modifiers.rs  scripted_rules.rs  scripted_triggers.rs  trigger_localization.rs  tutorials.rs
src/eu5/: events.rs  item.rs  mod.rs  modif.rs  scopes.rs
src/files/: filecontent.rs  filedb.rs  fileset.rs  fileset_builder.rs  mod.rs
src/gui/: block.rs  builtins.rs  categories.rs  properties.rs  validate.rs
src/hoi4/: effect_validation.rs  events.rs  modif.rs  validate.rs  variables.rs
src/imperator/: effect_validation.rs  events.rs  modif.rs
src/parse/: cob.rs  csv.rs  ignore.rs  json.rs  localization.rs  mod.rs  pdxfile.rs
src/report/: builder.rs  error_key.rs  error_loc.rs  (+7 more)
tests/: test.rs
tiger-bin-shared/: Cargo.toml
tiger-lsp/: Cargo.toml
tiger-lsp/src/: completion.rs  config.rs  connection.rs  datatype_tables.rs  error_codes.rs  game_concepts.rs  hover.rs  hover_handler.rs  key_texts.rs  lib.rs  loca.rs  logger.rs  lsp_types.rs  main.rs  main_loop.rs  notification.rs  openfile.rs  positions.rs  request.rs  response.rs  semantic.rs  server.rs  util.rs
tiger-lsp/src/parse/: game_concepts.lalrpop  loca_key_text.lalrpop  loca_line.rs  mod.rs  util.rs
tiger-lsp/tree-sitter-pdx-localization/: Cargo.toml  grammar.js  package.json  tree-sitter.json
tiger-lsp/tree-sitter-pdx-localization/bindings/rust/: build.rs  lib.rs
tiger-lsp/tree-sitter-pdx-localization/queries/: highlights.scm
tiger-lsp/tree-sitter-pdx-localization/src/: grammar.json  node-types.json  parser.c
tiger-tables/: Cargo.toml
utils/: Cargo.toml
vic3-tiger/: Cargo.toml
(+343 files in other folders)
