[package]
name = "internal_benches"
edition = "2021"

[features]
ck3 = ["tiger-lib/ck3"]
vic3 = ["tiger-lib/vic3"]

[dependencies]
divan = "0.1.21"
serde = "1.0.219"
toml = "0.9.2"

[dev-dependencies]
tiger-lib = { path = "..", version = "1.11.1", default-features = false, features = ["internal_benches"] }

[[bench]]
name = "internals"
harness = false
