[package]
name = "tiger-lsp"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0.102"
crop = "0.4.3"
log = "0.4.29"
lsp-types = "0.97.0"
partially = { version = "0.2.1", features = ["derive"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
simplelog = "0.12.2"

tiger-tables = { path = "../tiger-tables", version = "1.0.0", features = ["ck3", "vic3", "imperator", "eu5"] }

[dev-dependencies]
line-index = "0.1.2"
quickcheck = "1.1.0"
quickcheck_macros = "1.1.0"

[lints]
workspace = true
