[package]
name = "tiger-lsp"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Language server for mods of Paradox games. Currently only provides the `hover` feature for datatype expressions in locale files. Supports Crusader Kings 3, Victoria 3, and Imperator: Rome"
homepage = "https://github.com/amtep/tiger/wiki/LSP"
repository = "https://github.com/amtep/tiger"
readme = "../README.md"
keywords = [ "ck3", "vic3", "imperator", "paradox", "lsp", "language-server", "mods"]
categories = [ "development-tools", "game-development"]
rust-version = "1.88"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
crop = { version = "0.4.3", features = ["utf16-metric"] }
directories = "6.0.0"
log = "0.4.29"
lsp-types = "0.97.0"
partially = { version = "0.2.1", features = ["derive"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
simplelog = "0.12.2"
strum_macros = "0.28.0"
termtree = "1.0.0"
lalrpop-util = "0.23.1"

tiger-tables = { path = "../tiger-tables", version = "1.0.0", features = ["ck3", "vic3", "imperator", "eu5"] }

[build-dependencies]
lalrpop = "0.23.1"

[dev-dependencies]
line-index = "0.1.2"
quickcheck = "1.1.0"
quickcheck_macros = "1.1.0"

[lints]
workspace = true
